<resources>
    <string name="app_name">Gojek</string>
    <string name="title_home">Beranda</string>
    <string name="title_promo">Promo</string>
    <string name="title_chat">Chat</string>
    <string name="search_hint">Cari layanan, makanan, dan tujuan</string>
    <string name="search_description">Search Logo</string>
    <string name="gopay">gopay</string>
    <string name="balance">Rp2.500.000</string>
    <string name="information">Klik dan cek riwayat</string>
    <string name="pay_text">Bayar</string>
    <string name="add_balance_text">Isi Saldo</string>
    <string name="explore_text">Eksplor</string>
    <string name="account_description">Account</string>
    <string name="goride_text">GoRide</string>
    <string name="gocar_text">GoCar</string>
    <string name="gofood_text">GoFood</string>
    <string name="gomart_text">GoMart</string>
    <string name="gotagihan_text">GoTagihan</string>
    <string name="gopulsa_text">GoPulsa</string>
    <string name="gotix_text">GoTix</string>
    <string name="goplay_text">GoPlay</string>
    <string name="star_text">Star</string>
    <string name="xp_text">95 XP lagi ada harta karun</string>
    <string name="xp_info">XP Info</string>
    <string name="mcd_jakal">McDonald, Jakal</string>
    <string name="voucher_text">5 vouchers akan hangus</string>
    <string name="deadline_voucher_text">Pakai sebelum 11 November 2022</string>
    <string name="nearest_restaurant">Restoran terdekat</string>
    <string name="most_sale">Paling laku sekitarku</string>
    <string name="amount_voucher_text">7</string>
    <string name="vouchers">Vouchers</string>
    <string name="vouchers_expired">5 akan hangus</string>
    <string name="amount_subscribe_text">0</string>
    <string name="subcribe">Langganan</string>
    <string name="promo_activity">Lagi Aktif</string>
    <string name="amount_missions">0</string>
    <string name="missions_text">Missions</string>
    <string name="on_going">Lagi Berjalan</string>
    <string name="info">More Information</string>
    <string name="promo_code">Masukkan kode promo</string>
    <string name="download">Download Laporan Transaksi</string>
    <string name="fitur_choosen">Pilihan fitur</string>
    <string name="add">Add Chat</string>
    <string name="inbox">Inbox</string>
    <string name="help">Bantuan</string>
    <string name="pay">Bayar</string>
    <string name="your_chat">Chat kamu</string>
    <string name="mom">Mom</string>
    <string name="boboiboy">Boboiboy</string>
    <string name="messagge">Kamu punya pesan</string>
    <string name="chat_date">07/09/22</string>
</resources>